--- a/Overview/overview.tex
+++ b/Overview/overview.tex
@@ -1,5 +1,7 @@
 \chapter*{Overview}
-\label{chap:SomeStuff}
+\addcontentsline{toc}{chapter}{Overview}
+\label{chap:overview}
+    
 
 %% Restart the numbering to make sure that this is definitely page #1!
 \pagenumbering{arabic}
