--- a/main .tex
+++ b/main .tex
@@ -47,6 +47,9 @@
   \input{Chapter_1/chap1.tex}
   \input{Chapter_2/chap2.tex}
   \input{Chapter_3/chap3.tex}
+  \input{Chapter_4/chap4.tex}
+  \input{Chapter_5/chap5.tex}  
+  \input{Chapter_6/chap6.tex}    
   %% To ignore a specific chapter while working on another, making the build faster, comment it out:
   %\input{chap4}
 \end{mainmatter}
