--- a/mythesis.bib
+++ b/mythesis.bib
@@ -1,16 +1,480 @@
 %% Obtained via the getNewBibTeX script and the SPIRES biblio service
 
+%%-----------%%
+%% CHAPTER 1 %%
+%%-----------%%
 
-
-
-%%-----Example
-@Article{Phys.Rev.Lett.19.1264,
-     author    = "Weinberg, Steven",
-     title     = "A MODEL OF LEPTONS",
-     journal   = "Phys. Rev. Lett.",
-     volume    = "19",
-     year      = "1967",
-     pages     = "1264-1266",
-     SLACcitation  = "%%CITATION = PRLTA,19,1264;%%"
+%% Fritz Zwicky 1933 ()
+@Article{Fritz_Zwicky_1993,
+    author = "Zwicky, F.",
+    title = "Die Rotverschiebung von extragalaktischen Nebeln",
+    journal = "Helvetica Physica Acta",
+    year = "1933",
+    month = "Jan",
+    volume = "6",
+    pages = "110:127",
+    adsurl = {https://ui.adsabs.harvard.edu/abs/1933AcHPh...6..110Z},
+    adsnote = {Provided by the SAO/NASA Astrophysics Data System}
 }
 
+%% Modern Cosmology Textbook
+@Textbook{Modern_Cosmology,
+    author = "Scott Dodelson",
+    title = "\textit{Modern Cosmology}",
+    journal = "Elsevier",
+    year = "2003",
+    pages = "",
+}
+
+%% Gravity: An introduction to Einstain's General Relativity
+@Textbook{Gravity,
+    author = "James B. Hartle",
+    title = "\textit{Gravity: An Introduction To Einstein's General Relativity}",
+    journal = "Pearson",
+    year = "2003",
+    pages = "",
+}
+
+%% Slipler 1913 — First Doppler shift observations ()
+@Article{Slipler,
+    author = "Slipher, V. M.",
+    title = "The radial velocity of the Andromeda Nebula",
+    journal = "Lowell Observatory Bulletin",
+    year = "1913",
+    volume = "1",
+    pages = "pp.56-57",
+    adsurl = {https://ui.adsabs.harvard.edu/abs/1933AcHPh...6..110Z},
+    adsnote = {Provided by the SAO/NASA Astrophysics Data System}
+}
+
+%% Friedman 1922
+@Article{Friedman,
+    author = "Friedman, A.",
+    title = "Über die Krümmung des Raumes",
+    journal = "Zeitschrift für Physik",
+    year = "1922",
+    volume = "10",
+    pages = "",
+}
+
+%% Hubble 1929
+@Article{Hubble,
+    author = "Hubble, E.",
+    title = "",
+    journal = "Proceedings of the National Astronomical Society",
+    year = "1929",
+    volume = "",
+    pages = "15:168",
+}
+
+%% PLANK 2018
+@article{Plank_2018,
+      author         = "Aghanim, N. and others",
+      title          = "{Planck 2018 results. VI. Cosmological parameters}",
+      collaboration  = "Planck",
+      year           = "2018",
+      eprint         = "1807.06209",
+      archivePrefix  = "arXiv",
+      primaryClass   = "astro-ph.CO",
+      SLACcitation   = "%%CITATION = ARXIV:1807.06209;%%"
+}
+
+%% PLANK 2018
+@article{Plank_2018_2,
+      author         = "Akrami, Y. and others",
+      title          = "{Planck 2018 results. I. Overview and the cosmological
+                        legacy of Planck}",
+      collaboration  = "Planck",
+      year           = "2018",
+      eprint         = "1807.06205",
+      archivePrefix  = "arXiv",
+      primaryClass   = "astro-ph.CO",
+      SLACcitation   = "%%CITATION = ARXIV:1807.06205;%%"
+}
+
+%% Sean Carroll, Cosmological constant
+@Article{SeanC,
+    author = "Sean M. Carroll",
+    title = "The Cosmological Constant",
+    journal = "Living Rev. Rel.",
+    year = "2001",
+    volume = "4",
+}
+
+%% PDG Constants
+@article{pdg,
+  title = {Review of Particle Physics},
+  author = {M. Tanabashi et al.},
+  collaboration = {Particle Data Group},
+  journal = {Phys. Rev. D},
+  volume = {98},
+  issue = {3},
+  numpages = {1898},
+  year = {2018},
+  month = {Aug},
+  publisher = {American Physical Society},
+  doi = {10.1103/PhysRevD.98.030001},
+  url = {https://link.aps.org/doi/10.1103/PhysRevD.98.030001}
+}
+
+%% CMB discovery
+@ARTICLE{CMB_disc,
+       author = {{Penzias}, A.~A. and {Wilson}, R.~W.},
+        title = "{A Measurement of Excess Antenna Temperature at 4080 Mc/s.}",
+      journal = {Astrophys. J},
+     keywords = {Microwave Background, Cosmic Background Radiation},
+         year = "1965",
+        month = "Jul",
+       volume = {142},
+        pages = {419-421},
+          doi = {10.1086/148307},
+       adsurl = {https://ui.adsabs.harvard.edu/abs/1965ApJ...142..419P},
+      adsnote = {Provided by the SAO/NASA Astrophysics Data System}
+}
+
+%% CMB Temperature
+@ARTICLE{cmb_temp,
+       author = {{Mather}, J.~C. and others},
+        title = "{Calibrator Design for the COBE Far-Infrared Absolute Spectrophotometer (FIRAS)}",
+      journal = {Astrophys. J},
+         year = "1999",
+        month = "Feb",
+       volume = {512},
+       number = {2},
+        pages = {511-520},
+          doi = {10.1086/306805},
+}
+
+
+%% Planck: CMB Map 2018
+@article{plank_cmb_map,
+      author         = "Akrami, Y. and others",
+      title          = "{Planck 2018 results. IV. Diffuse component separation}",
+      collaboration  = "Planck",
+      year           = "2018",
+      eprint         = "1807.06208",
+      archivePrefix  = "arXiv",
+      primaryClass   = "astro-ph.CO",
+      SLACcitation   = "%%CITATION = ARXIV:1807.06208;%%"
+}
+
+%% Planck: CMB Power Spectrum
+@article{planck_power_spectrum,
+      author         = "Ade, P. A. R. and others",
+      title          = "{Planck 2013 results. I. Overview of products and
+                        scientific results}",
+      collaboration  = "Planck",
+      journal        = "Astron. Astrophys.",
+      volume         = "571",
+      year           = "2014",
+      pages          = "A1",
+      doi            = "10.1051/0004-6361/201321529",
+      eprint         = "1303.5062",
+      archivePrefix  = "arXiv",
+      primaryClass   = "astro-ph.CO",
+      reportNumber   = "CERN-PH-TH-2013-115",
+      SLACcitation   = "%%CITATION = ARXIV:1303.5062;%%"
+}
+
+%% Primordial nucleosynthesis
+@article{pns,
+      author         = "Coc, Alain and Vangioni, Elisabeth",
+      title          = "{Primordial nucleosynthesis}",
+      journal        = "Int. J. Mod. Phys.",
+      volume         = "E26",
+      year           = "2017",
+      number         = "08",
+      pages          = "1741002",
+      doi            = "10.1142/S0218301317410026",
+      eprint         = "1707.01004",
+      archivePrefix  = "arXiv",
+      primaryClass   = "astro-ph.CO",
+      SLACcitation   = "%%CITATION = ARXIV:1707.01004;%%"
+}
+
+%% BBN status update
+@article{BBN_figure,
+  title = {Big bang nucleosynthesis: Present status},
+  author = {Cyburt, Richard H. and Fields, Brian D. and Olive, Keith A. and Yeh, Tsung-Han},
+  journal = {Rev. Mod. Phys.},
+  volume = {88},
+  issue = {1},
+  pages = {015004},
+  numpages = {22},
+  year = {2016},
+  month = {Feb},
+  publisher = {American Physical Society},
+  doi = {10.1103/RevModPhys.88.015004},
+  url = {https://link.aps.org/doi/10.1103/RevModPhys.88.015004}
+}
+
+%% Origin of deuterium
+@article{Deuterium,
+  author = {Epstein, Richard I and Lattimer, James M and Schramm, David N},
+  doi = {10.1038/263198a0},
+  issn = {1476-4687},
+  journal = {Nature},
+  number = {5574},
+  pages = {198--202},
+  title = {{The origin of deuterium}},
+  url = {https://doi.org/10.1038/263198a0},
+  volume = {263},
+  year = {1976}
+}
+
+%% Limits on D/H
+@article{d_h_measurements,
+   title={Two New Low Galactic D/H Measurements from theFar Ultraviolet Spectroscopic Explorer},
+   volume={609},
+   ISSN={1538-4357},
+   url={http://dx.doi.org/10.1086/421325},
+   DOI={10.1086/421325},
+   number={2},
+   journal={The Astrophysical Journal},
+   publisher={IOP Publishing},
+   author={Wood, Brian E. and Linsky, Jeffrey L. and Hebrard, Guillaume and Williger, Gerard M. and Moos, H. Warren and Blair, William P.},
+   year={2004},
+   month={Jul},
+   pages={838–853}
+}
+
+%% Lithium problem 
+@article{Fields_2011,
+   title={The Primordial Lithium Problem},
+   volume={61},
+   ISSN={1545-4134},
+   url={http://dx.doi.org/10.1146/annurev-nucl-102010-130445},
+   DOI={10.1146/annurev-nucl-102010-130445},
+   number={1},
+   journal={Annual Review of Nuclear and Particle Science},
+   publisher={Annual Reviews},
+   author={Fields, Brian D.},
+   year={2011},
+   month={Nov},
+   pages={47–68}
+}
+
+%% ROTATION CURVES %%
+
+%% Oort noticing issyes with galaxies
+@ARTICLE{oort,
+       author = {{Oort}, J.~H.},
+        title = "{Some Problems Concerning the Structure and Dynamics of the Galactic System and the Elliptical Nebulae NGC 3115 and 4494.}",
+      journal = {Astrophys. J},
+         year = "1940",
+        month = "Apr",
+       volume = {91},
+        pages = {273},
+          doi = {10.1086/144167},
+       adsurl = {https://ui.adsabs.harvard.edu/abs/1940ApJ....91..273O},
+      adsnote = {Provided by the SAO/NASA Astrophysics Data System}
+}
+
+%% Vera Ruben & Ford
+@ARTICLE{ruben_ford,
+       author = {{Rubin}, Vera C. and {Ford}, W. Kent, Jr.},
+        title = "{Rotation of the Andromeda Nebula from a Spectroscopic Survey of Emission Regions}",
+      journal = {Astrophys. J},
+         year = "1970",
+        month = "Feb",
+       volume = {159},
+        pages = {379},
+          doi = {10.1086/150317},
+       adsurl = {https://ui.adsabs.harvard.edu/abs/1970ApJ...159..379R},
+      adsnote = {Provided by the SAO/NASA Astrophysics Data System}
+}
+
+@ARTICLE{ruben_ford_results,
+       author = {{Rubin}, V.~C. and {Ford}, W.~K., Jr. and {Thonnard}, N.},
+        title = "{Rotational properties of 21 SC galaxies with a large range of luminosities and radii, from NGC 4605 (R=4kpc) to UGC 2885 (R=122kpc).}",
+      journal = {Astrophys. J},
+     keywords = {Astronomical Spectroscopy, Galactic Evolution, Galactic Rotation, Galaxies, Stellar Luminosity, Dynamic Characteristics, Galactic Nuclei, Morphology, Radial Velocity, Radii, Astrophysics},
+         year = "1980",
+        month = "Jun",
+       volume = {238},
+        pages = {471-487},
+          doi = {10.1086/158003},
+       adsurl = {https://ui.adsabs.harvard.edu/abs/1980ApJ...238..471R},
+      adsnote = {Provided by the SAO/NASA Astrophysics Data System}
+}
+
+%% Galaxy rotation curve for Andromeda (M31)
+@article{Carignan_2006,
+	doi = {10.1086/503869},
+	url = {https://doi.org/10.1086%2F503869},
+	year = 2006,
+	month = {mar},
+	publisher = {{IOP} Publishing},
+	volume = {641},
+	number = {2},
+	pages = {L109--L112},
+	author = {Claude Carignan and Laurent Chemin and Walter K. Huchtmeier and Felix J. Lockman},
+	title = {The Extended {HiRotation} Curve and Mass Distribution of M31},
+	journal = {The Astrophysical Journal},
+}
+
+%% Dark matter halo discussion
+@ARTICLE{dm_halo,
+       author = {{Ashman}, Keith M.},
+        title = "{Dark Matter in Galaxies}",
+      journal = {\pasp},
+     keywords = {Dark Matter, Dwarf Galaxies, Galactic Halos, Mass Distribution, Milky Way Galaxy, Solar Neighborhood, Astrophysics, DARK MATTER, GALAXIES: KINEMATICS AND DYNAMICS},
+         year = "1992",
+        month = "Dec",
+       volume = {104},
+        pages = {1109},
+          doi = {10.1086/133099},
+       adsurl = {https://ui.adsabs.harvard.edu/abs/1992PASP..104.1109A},
+      adsnote = {Provided by the SAO/NASA Astrophysics Data System}
+}
+
+%% Rotation disc of milky way
+@article{Mr_z_2019,
+   title={Rotation Curve of the Milky Way from Classical Cepheids},
+   volume={870},
+   ISSN={2041-8213},
+   url={http://dx.doi.org/10.3847/2041-8213/aaf73f},
+   DOI={10.3847/2041-8213/aaf73f},
+   number={1},
+   journal={The Astrophysical Journal},
+   publisher={American Astronomical Society},
+   author={Mróz, Przemek and Udalski, Andrzej and Skowron, Dorota M. and Skowron, Jan and Soszyński, Igor and Pietrukowicz, Paweł and Szymański, Michał K. and Poleski, Radosław and Kozłowski, Szymon and Ulaczyk, Krzysztof},
+   year={2019},
+   month={Jan},
+   pages={L10}
+}
+
+%% Mond
+@article{Milgrom_2015,
+   title={MOND theory},
+   volume={93},
+   ISSN={1208-6045},
+   url={http://dx.doi.org/10.1139/cjp-2014-0211},
+   DOI={10.1139/cjp-2014-0211},
+   number={2},
+   journal={Canadian Journal of Physics},
+   publisher={Canadian Science Publishing},
+   author={Milgrom, Mordehai},
+   year={2015},
+   month={Feb},
+   pages={107–118}
+}
+
+%% MOG
+@article{Moffat_2006,
+   title={Scalar–tensor–vector gravity theory},
+   volume={2006},
+   ISSN={1475-7516},
+   url={http://dx.doi.org/10.1088/1475-7516/2006/03/004},
+   DOI={10.1088/1475-7516/2006/03/004},
+   number={03},
+   journal={Journal of Cosmology and Astroparticle Physics},
+   publisher={IOP Publishing},
+   author={Moffat, J W},
+   year={2006},
+   month={Mar},
+   pages={004–004}
+}
+
+%% Large scale structure
+@Textbook{LSS_coles,
+      author         = "Coles, P. and Lucchin, F.",
+      title          = "\textit{Cosmology: The Origin and evolution of cosmic structure}",
+      journal        = "Wiley",
+      year           = "1995",
+      SLACcitation   = "%%CITATION = INSPIRE-405909;%%"
+}
+
+%% Dark Matter & WIMPs %%
+
+%% Axions and CP 
+@article{axions_cp,
+  title = {$\mathrm{CP}$ Conservation in the Presence of Pseudoparticles},
+  author = {Peccei, R. D. and Quinn, Helen R.},
+  journal = {Phys. Rev. Lett.},
+  volume = {38},
+  issue = {25},
+  pages = {1440--1443},
+  numpages = {0},
+  year = {1977},
+  month = {Jun},
+  publisher = {American Physical Society},
+  doi = {10.1103/PhysRevLett.38.1440},
+  url = {https://link.aps.org/doi/10.1103/PhysRevLett.38.1440}
+}
+
+%% QCD Instantons
+@article{Sch_fer_1998,
+   title={Instantons in QCD},
+   volume={70},
+   ISSN={1539-0756},
+   url={http://dx.doi.org/10.1103/RevModPhys.70.323},
+   DOI={10.1103/revmodphys.70.323},
+   number={2},
+   journal={Reviews of Modern Physics},
+   publisher={American Physical Society (APS)},
+   author={Schäfer, T. and Shuryak, E. V.},
+   year={1998},
+   month={Apr},
+   pages={323–425}
+}
+
+%% QCD Lagrangian CP violation 
+@article{gauge_theory_vacuum,
+title = "The structure of the gauge theory vacuum",
+journal = "Physics Letters B",
+volume = "63",
+number = "3",
+pages = "334 - 340",
+year = "1976",
+issn = "0370-2693",
+doi = "https://doi.org/10.1016/0370-2693(76)90277-X",
+url = "http://www.sciencedirect.com/science/article/pii/037026937690277X",
+author = "C.G. Callan and R.F. Dashen and D.J. Gross",
+}
+
+%% Symmetry breaking
+@article{tHooft:1976rip,
+      author         = "'t Hooft, Gerard",
+      title          = "{Symmetry Breaking Through Bell-Jackiw Anomalies}",
+      journal        = "Phys. Rev. Lett.",
+      volume         = "37",
+      year           = "1976",
+      pages          = "8-11",
+      doi            = "10.1103/PhysRevLett.37.8",
+      note           = "[,226(1976)]",
+      reportNumber   = "PRINT-76-0254 (HARVARD)",
+      SLACcitation   = "%%CITATION = PRLTA,37,8;%%"
+}
+
+%% Electric dipole moment limit of neutron
+@article{edm_limit,
+      author         = "Baker, C. A. and others",
+      title          = "{An Improved experimental limit on the electric dipole
+                        moment of the neutron}",
+      journal        = "Phys. Rev. Lett.",
+      volume         = "97",
+      year           = "2006",
+      pages          = "131801",
+      doi            = "10.1103/PhysRevLett.97.131801",
+      eprint         = "hep-ex/0602020",
+      archivePrefix  = "arXiv",
+      primaryClass   = "hep-ex",
+      SLACcitation   = "%%CITATION = HEP-EX/0602020;%%"
+}
+
+%% Introducing axions
+@article{axions_family,
+  title = {Axions and Family Symmetry Breaking},
+  author = {Wilczek, Frank},
+  journal = {Phys. Rev. Lett.},
+  volume = {49},
+  issue = {21},
+  pages = {1549--1552},
+  numpages = {0},
+  year = {1982},
+  month = {Nov},
+  publisher = {American Physical Society},
+  doi = {10.1103/PhysRevLett.49.1549},
+  url = {https://link.aps.org/doi/10.1103/PhysRevLett.49.1549}
+}
